# Obit

./: InstallObit.sh  Notes.test  README  makeDist.sh  migrateObit.text
ObitSystem/Obit/: .cvsignore  Makefile  Makefile.in  README  aclocal.m4  configure  configure.ac
ObitSystem/Obit/AIPS/: Makefile  OBTST.FOR  OBTST.HLP
ObitSystem/Obit/TDF/: ASDMList.TDF  AutoFlag.TDF  AvgBL.TDF  AvgCh.TDF  BASMangle.TDF  BDFIn.TDF  BPCal.TDF  BPass.TDF  BeamCor.TDF  Bloat.TDF  CLCal.TDF  CLCor.TDF  CVel.TDF  Calib.TDF  ComBeam.TDF  Convol.TDF  CubeClip.TDF  CubeVel.TDF  DFTIm.TDF  DPCal.TDF  DftPl.TDF  FAlign.TDF  Faces.TDF  Farad.TDF  Feather.TDF  FndSou.TDF  GetJy.TDF  HGeom.TDF  Hann.TDF  IDIIn.TDF  IDIOut.TDF  ImPlot.TDF  Imager.TDF  IonCal.TDF  IonImage.TDF  IonMovie.TDF  IonSF.TDF  Lin2Cir.TDF  Lister.TDF  LowFRFI.TDF  (+57 more)
ObitSystem/Obit/doc/: Makefile  OBITdoc.tex
ObitSystem/Obit/dummy_xmlrpc/: README  base.h  client.h  xmlrpc.c  xmlrpc.h  xmlrpc_client.h  xmlrpc_server.h
ObitSystem/Obit/include/: CUDABeamInterp.h  CUDABeamInterpDef.h  CUDAFArray.h  CUDAFArrayDef.h  CUDAFInterpolate.h  CUDAFInterpolateDef.h  CUDAImageDescDef.h  CUDALinCorSum.h  CUDAMath.h  CUDASkyGeom.h  Obit.h  ObitAIPS.h  ObitAIPSCat.h  ObitAIPSDir.h  ObitAIPSFortran.h  ObitAIPSObject.h  ObitALMACalAtm.h  ObitALMACalAtmClassDef.h  ObitALMACalAtmDef.h  ObitAll.h  ObitAntenna.h  ObitAntennaClassDef.h  ObitAntennaDef.h  ObitAntennaList.h  ObitAntennaListClassDef.h  ObitAntennaListDef.h  ObitBDFData.h  ObitBDFDataClassDef.h  ObitBDFDataDef.h  ObitBDFDataTypeDef.h  ObitBeamShape.h  ObitBeamShapeClassDef.h  ObitBeamShapeDef.h  ObitCArray.h  ObitCArrayClassDef.h  ObitCArrayDef.h  ObitCInterpolate.h  ObitCInterpolateClassDef.h  ObitCInterpolateDef.h  ObitCUDABeamModel.h  (+680 more)
ObitSystem/Obit/lib/: Makefile
ObitSystem/Obit/m4/: gsl.m4  msse.m4  python.m4  wvr.m4
ObitSystem/Obit/python/: .cvsignore  AIPSDir.inc  AIPSDir.py  AIPSSetup103.py  ALMACal.py  ALMAPipe.py  AddSource.py  AntennaList.inc  AntennaList.py  BeamShape.inc  BeamShape.py  Blank.py  CArray.inc  CArray.py  Catalog.inc  Catalog.py  CleanImage.inc  CleanImage.py  CleanVis.inc  CleanVis.py  ConvUtil.inc  ConvUtil.py  Doppler.inc  Doppler.py  EVLACal.py  EVLAContPipe.py  EVLALowBandPipe.py  EVLAPipeline.py  EVLAPolnScripts.py  FArray.inc  FArray.py  FArrayUtil.inc  FArrayUtil.py  FFT.inc  FFT.py  FITSDir.py  FITSFile.inc  FInterpolate.inc  FInterpolate.py  FeatherUtil.py  (+200 more)
ObitSystem/Obit/src/: CUDAFArray.cu  CUDAFInterpolate.cu  Makefile.in  Obit.c  ObitAIPS.c  ObitAIPSCat.c  ObitAIPSCat.c.save  ObitAIPSDir.c  ObitAIPSFortran.c  ObitAIPSObject.c  ObitALMACalAtm.c  ObitAntenna.c  ObitAntennaList.c  ObitBDFData.c  ObitBeamShape.c  ObitCArray.c  ObitCInterpolate.c  ObitCUDABeamModel.cu  ObitCUDAGrid.c  ObitCUDAGrid.cu  ObitCUDASkyModel.cu  ObitCUDAUtil.cu  ObitConvUtil.c  ObitDCon.c  ObitDConClean.c  ObitDConCleanBmHist.c  ObitDConCleanImage.c  ObitDConCleanPxHist.c  ObitDConCleanPxList.c  ObitDConCleanPxListMF.c  ObitDConCleanPxListWB.c  ObitDConCleanVis.c  ObitDConCleanVisLine.c  ObitDConCleanVisMF.c  ObitDConCleanVisWB.c  ObitDConCleanWindow.c  ObitData.c  ObitDisplay.c  ObitDoppler.c  ObitEVLASysPower.c  (+209 more)
ObitSystem/Obit/tasks/: ASDMList.c  AutoFlag.c  AutoFlag.doc  AvgBL.c  AvgCh.c  BASMangle.c  BDFIn.c  BPCal.c  BPass.c  BeamCor.c  Bloat.c  CLCal.c  CLCor.c  CVel.c  Calib.c  ComBeam.c  Convol.c  CubeClip.c  CubeVel.c  DFTIm.c  DPCal.c  DftPl.c  FAlign.c  Faces.c  Farad.c  Feather.c  Feather.doc  Feather.in  FndSou.c  FuncContainer.c  GetJy.c  HGeom.c  Hann.c  IDIIn.c  IDIOut.c  ImPlot.c  Imager.c  Imager.doc  IonCal.c  IonImage.c  (+66 more)
ObitSystem/Obit/test/: AIPS2FITS.c  Makefile  Makefile.in  testCCMerge.c  testCleanVis.c  testFeather.c  testHGeom.c  testPre.c
ObitSystem/Obit/testScripts/: Makefile  testCleanVis.py  testContourPlot.py  testFeather.py  testHGeom.py  testObit.py  testUVImage.py  testUVSub.py
ObitSystem/ObitSD/: Makefile.in  configure  configure.ac
ObitSystem/ObitSD/TDF/: CCBCalib.TDF  CCBFix.TDF  CCBOTF.TDF  DCROTF.TDF  OTFImage.TDF  OTFSCal.TDF  PAROTF.TDF  PAROTF2.TDF  QuadDet.TDF  VEGASOTF.TDF
ObitSystem/ObitSD/doc/: Makefile  OBITdoc.tex  ObitSD.tex  PennArrayDoc.tex  obitdoc.tex  whatisthis.tex
ObitSystem/ObitSD/include/: Obit2DLegendre.h  ObitDConCleanOTF.h  ObitDConCleanOTFClassDef.h  ObitDConCleanOTFDef.h  ObitDConCleanOTFRec.h  ObitDConCleanOTFRecClassDef.h  ObitDConCleanOTFRecDef.h  ObitGBTBeamOffInfo.h  ObitGBTBeamOffInfoClassDef.h  ObitGBTBeamOffInfoDef.h  ObitGBTCCBPortInfo.h  ObitGBTCCBPortInfoClassDef.h  ObitGBTCCBPortInfoDef.h  ObitGBTCCBStateInfo.h  ObitGBTCCBStateInfoClassDef.h  ObitGBTCCBStateInfoDef.h  ObitGBTCCBUtil.h  ObitGBTDCROTF.h  ObitGBTDCROTFClassDef.h  ObitGBTDCROTFDef.h  ObitGBTDCRStateInfo.h  ObitGBTDCRStateInfoClassDef.h  ObitGBTDCRStateInfoDef.h  ObitGBTIFInfo.h  ObitGBTIFInfoClassDef.h  ObitGBTIFInfoDef.h  ObitGBTVEGASAct_StateInfo.h  ObitGBTVEGASAct_StateInfoClassDef.h  ObitGBTVEGASAct_StateInfoDef.h  ObitGBTVEGASPortInfo.h  ObitGBTVEGASPortInfoClassDef.h  ObitGBTVEGASPortInfoDef.h  ObitGBTVEGASSamplerInfo.h  ObitGBTVEGASSamplerInfoClassDef.h  ObitGBTVEGASSamplerInfoDef.h  ObitGBTVEGASStateInfo.h  ObitGBTVEGASStateInfoClassDef.h  ObitGBTVEGASStateInfoDef.h  ObitIOOTFFITS.h  ObitIOOTFFITSClassDef.h  (+196 more)
ObitSystem/ObitSD/lib/: Makefile
ObitSystem/ObitSD/m4/: curl.m4  glib-2.0.m4  obit.m4
ObitSystem/ObitSD/python/: .cvsignore  CCBUtil.py  CleanOTF.inc  CleanOTF.py  CleanOTFRec.inc  CleanOTFRec.py  GBTDCROTF.inc  GBTDCROTF.py  GBTUtil.py  Makefile.in  OTF.inc  OTF.py  OTFArrayGeom.inc  OTFArrayGeom.py  OTFDesc.inc  OTFDesc.py  OTFGetAtmCor.inc  OTFGetAtmCor.py  OTFGetSoln.inc  OTFGetSoln.py  OTFRec.inc  OTFRec.py  OTFSoln2Cal.inc  OTFSoln2Cal.py  OTFUtil.inc  OTFUtil.py  Obit.i  ObitSD.swig  ObitSDTypeMaps.swig  Obit_wrap.c  Obit_wrap.doc  PARCal.py  TableGBTANTPOSPF.inc  TableGBTCCBPORT.inc  TableGBTPARSENSOR.inc  TableGBTQUADDETECTOR.inc  TableGBTVEGASACT_STATE.inc  TableGBTVEGASDATA.inc  TableGBTVEGASPORT.inc  (+14 more)
ObitSystem/ObitTalk/: .cvsignore  ENVIRONMENT  configure  configure.ac
(+4345 files in other folders)
